syntax = "proto3";
package nesting;

option go_package = "./proto";

message InitRequest {
    bytes config = 1;
}

message InitResponse {
}

message CreateRequest {
    string name = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
}
message ListRequest {
}

message ListResponse {
    repeated VirtualMachine vms = 1;
}

message ShutdownRequest {
}

message ShutdownResponse {
}

message VirtualMachine {
    string id = 1;
    string name = 2;
    string addr = 3;
}

service Nesting {
    rpc Init(InitRequest) returns (InitResponse);
    rpc Create(CreateRequest) returns (VirtualMachine);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc List(ListRequest) returns (ListResponse);

    rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}